src/objects/Action__mdt.object
<CustomObject>
    <description>Defines the master list of actions available for a Context Type.</description>
    <fields>
        <fullName>ContextType__c</fullName>
        <description>Relationship to define an Action with a particular Context Type.</description>
        <inlineHelpText>Relationship to define an Action with a particular Context Type.</inlineHelpText>
        <label>Context Type</label>
        <referenceTo>ContextType__mdt</referenceTo>
        <relationshipLabel>Context Type Actions</relationshipLabel>
        <relationshipName>ContextTypeActions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CustomLabelApiName__c</fullName>
        <description>API Name of Custom Label which contains translatable name for current action.</description>
        <inlineHelpText>API Name of Custom Label which contains translatable name for current action.</inlineHelpText>
        <label>Translation Label Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>API name for the field that is used to update a record.</description>
        <inlineHelpText>API name for the field that is used to update a record.</inlineHelpText>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <description>Value to update a record field.</description>
        <inlineHelpText>Value to update a record field.</inlineHelpText>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <description>Addition parameters of Action</description>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of Action, such as a record update.</description>
        <inlineHelpText>The type of Action, such as a record update.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Record Update</fullName>
                    <default>true</default>
                    <label>Record Update</label>
                </value>
                <value>
                    <fullName>Platform Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action</label>
    <pluralLabel>Actions</pluralLabel>
</CustomObject>